@@ -1,2 +1,3 @@
 src/test-profile.c
 src/dh-gecko-utils.cpp
+devhelp.desktop.in
