@@ -1,3 +1,9 @@
+2005-04-05  Richard Hult  <richard@imendio.com>
+
+	* POTFILES.skip: Add desktop.in.
+
+	* sv.po: Update.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Added Kinyarwanda translation.
