@@ -1,3 +1,14 @@
+2005-04-05  Richard Hult  <richard@imendio.com>
+
+	* src/bacon-message-connection.c: Update.
+
+	* src/dh-main.c: (window_get_is_on_current_workspace),
+	(window_present): Fix window presentation.
+	(main): Set application name.
+	* src/dh-window.c: Fix coding style.
+	(window_activate_about): Fix the about box: Johan's email address,
+	don't put up an empty documenters' tab.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * configure.in: Added "rw" to ALL_LINGUAS.
